--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,33 +1,24 @@
-.App {
-  text-align: center;
+.flex{
+  display:flex
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.test{
+  background-color:rgb(94, 94, 94);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.test3{
+  background-color:rgb(185, 185, 185);
 }
 
-.App-link {
-  color: #61dafb;
+.test2{
+  height:85vh;
+  overflow-y: auto;
+  overflow-wrap: break-word;
+}
+.click{
+  padding:.5em 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.padding{
+  padding:.5em 0;
 }
